src/test/deca/context/invalid/test_error_3.39-7.deca

// Description:
//    Soulève l'erreur (3.39) : le cast
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : conversion de "float" en "NullType" n'est pas possible (règle 3.39)
//
// Historique:
//      cree le 19/01/2022

{
    float i;
    i = (float) (null);
}

